--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "razzle start",
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
+    "build:prod": "razzle build | node server.js",
     "start:prod": "NODE_ENV=production node build/server.js"
   },
   "dependencies": {
