--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "razzle start",
-    "build": "razzle build",
+    "build": "razzle build && NODE_ENV=production node build/server.js",
     "test": "razzle test --env=jsdom",
     "build:prod": "razzle build && NODE_ENV=production node build/server.js",
     "start:prod": "NODE_ENV=production node build/server.js"
