--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "license": "MIT",
   "scripts": {
     "start": "razzle start",
-    "build": "razzle build && NODE_ENV=production node build/server.js",
+    "build": "razzle build",
     "test": "razzle test --env=jsdom",
-    "build:prod": "razzle build && NODE_ENV=production node build/server.js",
+    "heroku-postbuild": "npm run build",
     "start:prod": "NODE_ENV=production node build/server.js"
   },
   "dependencies": {
