--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "my-razzle-app",
   "version": "0.1.0",
   "license": "MIT",
-  "scripts": {
-    "start": "razzle start",
-    "build": "razzle build",
-    "test": "razzle test --env=jsdom",
-    "heroku-postbuild": "npm run build",
-    "start:prod": "NODE_ENV=production node build/server.js"
-  },
+   "scripts": {
+     "start": "razzle start",
+     "build": "razzle build",
+     "test": "razzle test --env=jsdom",
+     "prestart:prod": "yarn build",
+     "start:prod": "NODE_ENV=production node build/server.js",
+     "deploy": "git push heroku master"
+   },
   "dependencies": {
     "express": "4.17.1",
     "razzle": "3.0.0",
