--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "my-razzle-app",
   "version": "0.1.0",
   "license": "MIT",
-   "scripts": {
-     "start": "razzle start",
-     "build": "razzle build",
-     "test": "razzle test --env=jsdom",
-     "prestart:prod": "yarn build",
-     "start:prod": "NODE_ENV=production node build/server.js",
-     "deploy": "git push heroku master"
-   },
+  "scripts": {
+    "start": "razzle start",
+    "build": "razzle build",
+    "test": "razzle test --env=jsdom",
+    "prestart:prod": "yarn build",
+    "start:prod": "NODE_ENV=production node build/server.js",
+    "deploy": "git push heroku master"
+  },
   "dependencies": {
     "express": "4.17.1",
     "razzle": "3.0.0",
+    "razzle-heroku": "^3.0.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-router-dom": "5.0.1"
