--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "firebase": "^6.6.2",
     "razzle": "^3.0.0",
     "razzle-heroku": "^3.0.0",
     "react": "^16.9.0",
