--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^6.6.2",
     "razzle": "^3.0.0",
     "razzle-heroku": "^3.0.0",
+    "razzle-plugin-scss": "^3.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1"
