--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "razzle-plugin-scss": "^3.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-stripe-elements": "^5.0.1",
+    "stripe": "^7.9.1"
   }
 }
