--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-stripe-elements": "^5.0.1",
+    "react-stripe-elements-universal": "^1.2.0-3",
     "stripe": "^7.9.1"
   }
 }
